# antimony

./: .fpm  .gitignore  2  Cargo.toml  README.md  bench  bolt  deploy  deploy-completions  document  package  pgo
.github/workflows/: build.yml
completions/: _antimony  antimony.bash  antimony.fish
config/: config.toml  default.toml  feature.toml  new.toml  profile.toml
config/config.d/: base.toml  debian.toml  fedora.toml
config/features/: accessibility.toml  applications.toml  bin.toml  cgroup.toml  daemon.toml  debug-shell.toml  dev.toml  dri.toml  dry.toml  electron.toml  enchant.toml  etc.toml  flatpak-spawn.toml  fonts.toml  freerdp.toml  gcc.toml  gdk-pixbuf.toml  gio.toml  gir.toml  git.toml  gjs.toml  glycin.toml  gnutls.toml  gocryptfs.toml  gst.toml  gtk3.toml  gtk4.toml  gtksourceview.toml  gvfs.toml  hardened_malloc.toml  hostname.toml  hunspell.toml  include.toml  kde-inhibit.toml  kf6.toml  ksysguard.toml  ld.toml  lib.toml  libadwaita.toml  libclapper.toml  (+40 more)
config/profiles/: alpaca.toml  amberol.toml  anki.toml  antimony.toml  apostrophe.toml  ark.toml  bash.toml  battle.toml  blanket.toml  bustle.toml  calibre.toml  chromium.toml  clapper.toml  copilot.toml  cryptomator.toml  dconf-editor.toml  deskflow.toml  dolphin.toml  electron-mail.toml  electronmail.toml  evince.toml  extension-manager.toml  filelight.toml  firefox.toml  firewall-applet.toml  fooyin.toml  fragments.toml  gapless.toml  gnome-calculator.toml  gnome-connections.toml  gwenview.toml  haruna.toml  input-leap.toml  invidious.toml  kcalc.toml  kclock.toml  kdeconnectd.toml  keepassxc-qt6.toml  keepassxc.toml  keypunch.toml  (+54 more)
crates/: README.md
crates/antimony_completions/: Cargo.toml  README.md
crates/antimony_utils/: Cargo.toml  README.md
crates/antimony_utils/src/: lib.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: cache.rs  lib.rs  singleton.rs  stream.rs
crates/notify/: Cargo.toml  README.md
crates/notify/src/: lib.rs  main.rs
crates/seccomp/: Cargo.toml  README.md
crates/spawn/: Cargo.toml  README.md
crates/spawn/src/: fork.rs  handle.rs  lib.rs  spawn.rs
crates/temp/: Cargo.toml  README.md
crates/temp/src/: lib.rs
crates/user/: Cargo.toml  README.md
crates/user/src/: lib.rs  sync.rs
crates/utilities/: Cargo.toml  README.md
crates/which/: Cargo.toml  README.md
crates/which/src/: lib.rs
doc/: Configurations.md  Defaults.md  Profiles.md  SECCOMP.md
docs/: Defaults.md  Hooks.md  Profiles.md  SECCOMP.md  Speed.md  Usage.md  crates.js  help.html  index.html  settings.html  src-files.js
docs/antimony/: all.html  index.html  macro.timer.html
docs/antimony_bench/: all.html  enum.Benchmark.html  fn.cooldown.html  fn.main.html  index.html  sidebar-items.js  struct.Cli.html
docs/antimony_completions/: all.html  fn.main.html  index.html
docs/antimony_dumper/: all.html  enum.Command.html  fn.collect_paths.html  fn.collection.html  fn.main.html  fn.reader.html  fn.runner.html  index.html  sidebar-items.js  static.SELF.html  struct.AttachArgs.html  struct.Cli.html  struct.RunArgs.html
docs/antimony_monitor/: all.html  enum.Error.html  fn.audit_reader.html  fn.commit_or_defer.html  fn.main.html  fn.notify.html  fn.notify_reader.html  fn.update_binary.html  fn.update_profile.html  index.html  struct.Cli.html
docs/antimony_open/: all.html  fn.main.html  index.html
docs/antimony_spawn/: all.html  fn.main.html  index.html  struct.Cli.html
docs/common/: all.html  index.html  sidebar-items.js
docs/html/: help.html  index.html
docs/md/: Defaults.md
docs/notify/: all.html  enum.Error.html  enum.Urgency.html  fn.action.html  fn.init.html  fn.init_error.html  fn.level_color.html  fn.level_name.html  fn.level_urgency.html  fn.notify.html  fn.set_notifier.html  index.html  sidebar-items.js  static.LEVEL.html  static.PROMPT_LEVEL.html
docs/search.index/: 0059b03bb3af.js  0121c87e0915.js  0195bb94334e.js  01b6948241b1.js  01cd00f8d69e.js  0212a2dfa214.js  024777014b0e.js  028f164cd622.js  02aa9cd2a4a4.js  03dcad7c05aa.js  0421c1dfec49.js  049306d3c7eb.js  055503dc8b35.js  05f56d45e1ae.js  060fbcf1d58b.js  0696135a10ce.js  07042e78cedc.js  07212f8c86b3.js  08523be6753c.js  08b1cc4f255f.js  08bea2e8f8b6.js  096c6ac4c210.js  0a30fc963e72.js  0a83ecfd0a88.js  0aee107467a4.js  0b4ef9032c49.js  0d04be4f501f.js  0dab547bcfd4.js  0eb394ed1672.js  0eb899774cfa.js  0f6da75d700d.js  0fb4b1e1ed65.js  1165b4435d44.js  116c3bdff9e8.js  126756412461.js  134bb3833df4.js  1618ca784930.js  16822f3ed8d5.js  16f3a2d55f59.js  172616f63f78.js  (+205 more)
docs/seccomp/: all.html  enum.Error.html  fn.get_architecture.html  index.html
docs/spawn/: all.html  enum.ForkError.html  enum.HandleError.html  enum.SpawnError.html  enum.StreamMode.html  index.html  sidebar-items.js  struct.Fork.html  struct.Handle.html  struct.Spawner.html  struct.Stream.html
docs/temp/: all.html  index.html  sidebar-items.js  struct.Builder.html  struct.Directory.html  struct.File.html  struct.Temp.html  trait.BuilderCreate.html  trait.Object.html
docs/user/: all.html  enum.Mode.html  fn.current.html  fn.drop.html  fn.obtain_lock.html  fn.restore.html  fn.revert.html  fn.set.html  index.html  macro.as_effective!.html  macro.as_effective.html  macro.as_real.html  macro.run_as.html  sidebar-items.js  static.GROUP.html  static.SETUID.html  static.USER.html  struct.Error.html  struct.Sync.html
docs/which/: all.html  enum.Error.html  fn.which.html  (+4 more)
hooks/: after_install.sh  after_remove.sh  after_upgrade.sh
install/: antimony
md/: Backends.md  Changelog.md  Config.md  Configurations.md  Defaults.md  Features.md  Home.md  Hooks.md  Lockdown.md  Packages.md  Profiles.md  Quickstart.md  SECCOMP.md  SOF.md  Speed.md  System.md  Todo.md  Usage.md
scripts/: bench  build  cargo-bencher  cargo-builder  cargo-deploy  cargo-digest  cargo-document  cargo-package  cargo-packager  cargo-prettify  cargo-tester  deploy  document  package
src/: README.md  antimony.rs  lib.rs
tests/: bash.test  common.util  edit.test  import.test  info.test  integrate.test  no_binary.fail  refresh.rs  run.rs  run.test
(+732 files in other folders)
