[package]
name = "antimony"
version = "3.0.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/seccomp",
    "crates/spawn",
    "crates/user",
    "crates/notify",
    "crates/which",
    "crates/temp",
    "crates/utilities",
    "crates/common",
]

[[bin]]
name = "antimony"
path = "src/antimony.rs"

[dependencies]
common = { path = "crates/common", features = ["stream"] }
notify = { path = "crates/notify" }
seccomp = { path = "crates/seccomp", features = ["notify"] }
spawn = { path = "crates/spawn", features = ["cache", "elevate", "fd", "seccomp", "user", "fork"] }
temp = { path = "crates/temp", features = ["user"]}
user = { path = "crates/user" }
which = { path = "crates/which" }

ahash = { version = "0.8.12", default-features = false, features = ["compile-time-rng", "std"] }
anyhow = { version = "1.0.98", features = ["std"], default-features = false }
caps = "0.5.6"
clap = { version = "4.5.39", features = ["derive", "help", "usage", "std", "suggestions"], default-features = false }
console = { version = "0.16.0", default-features = false }
dashmap = { version = "6.1.0", features = ["rayon", "serde"], default-features = false }
dbus = { version = "0.9.10", features = ["stdfd"], default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
enum_dispatch = { version = "0.3.13", default-features = false }
heck = { version = "0.5.0", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
inotify = { version = "0.11.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.30.1", default-features = false, features = ["socket", "uio"] }
parking_lot = { version = "0.12.5", default-features = false }
rayon = { version = "1.10.0", default-features = false }
rusqlite = { version = "0.37.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
signal-hook = { version = "0.3.18", default-features = false }
toml = { version = "0.8.22", default-features = false, features = ["display", "parse"] }
indexmap = { version = "2.12.1", features = ["rayon", "serde", "std"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }

[profile.dev]
debug = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.gdb]
inherits = "dev"
debug = true

[profile.symbols]
inherits = "release"
strip = "none"
