[package]
name = "antimony"
version = "5.0.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/seccomp",
    "crates/spawn",
    "crates/user",
    "crates/notify",
    "crates/which",
    "crates/temp",
    "crates/utilities",
    "crates/common",
]

[[bin]]
name = "antimony"
path = "src/antimony.rs"

[dependencies]
common = { path = "crates/common", features = ["stream"] }
notify = { path = "crates/notify" }
seccomp = { path = "crates/seccomp", features = ["notify"] }
spawn = { path = "crates/spawn", features = ["cache", "elevate", "fd", "seccomp", "user"] }
temp = { path = "crates/temp", features = ["user"]}
user = { path = "crates/user" }
which = { path = "crates/which" }

ahash = { version = "0.8.12", default-features = false, features = ["no-rng"] }
anyhow = { version = "1.0.98", features = ["std"], default-features = false }
bilrost = { version = "0.1014.2", default-features = false, features = ["auto-optimize", "derive", "std"] }
caps = "0.5.6"
clap = { version = "4.5.39", features = ["derive", "help", "usage", "std", "suggestions"], default-features = false }
dashmap = { version = "6.1.0", features = ["rayon", "serde"], default-features = false }
dbus = { version = "0.9.10", features = ["stdfd"], default-features = false }
dialoguer = { version = "0.11.0", default-features = false }
enum_dispatch = { version = "0.3.13", default-features = false }
heck = { version = "0.5.0", default-features = false }
indicatif = { version = "0.18.4", default-features = false }
inotify = { version = "0.11.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.30.1", default-features = false, features = ["socket", "uio"] }
parking_lot = { version = "0.12.5", default-features = false, features = ["serde"] }
rayon = { version = "1.10.0", default-features = false }
rusqlite = { version = "0.37.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
toml = { version = "0.8.22", default-features = false, features = ["display", "parse"] }
similar = { version = "3.1.0", default-features = false, features = ["text", "unicode"] }

[workspace.lints.rust]
unused_crate_dependencies = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
absolute_paths = "warn"
arithmetic_side_effects = "warn"
clone_on_ref_ptr = "warn"
missing_docs_in_private_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
str_to_string = "warn"
unreachable = "warn"
use_debug = "warn"
unused_results = "warn"
unwrap_used = "warn"
panic = "warn"
infinite_loop = "warn"
correctess = "warn"
nursery = "warn"
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"

[lints]
workspace = true

[profile.dev]
debug = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.gdb]
inherits = "dev"
debug = true

[profile.symbols]
inherits = "release"
strip = "none"
