[package]
name = "antimony"
version = "5.0.1"
edition = "2024"

[dependencies]
common = { git = "https://github.com/kkernick/common", features = ["stream"] }
notify = { git = "https://github.com/kkernick/notify" }
seccomp = {  git = "https://github.com/kkernick/seccomp", features = ["notify"] }
spawn = { git = "https://github.com/kkernick/spawn", features = ["cache", "elevate", "fd", "seccomp", "user"] }
temp = { git = "https://github.com/kkernick/temp", features = ["user"]}
user = { git = "https://github.com/kkernick/user" }
which = {  git = "https://github.com/kkernick/which" }

ahash = { version = "0.8.12", default-features = false, features = ["no-rng"] }
anyhow = { version = "1.0.98", features = ["std"], default-features = false }
bilrost = { version = "0.1014.2", default-features = false, features = ["auto-optimize", "derive", "std"] }
caps = "0.5.6"
clap = { version = "4.5.39", features = ["derive", "help", "usage", "std", "suggestions"], default-features = false }
clap_complete = { version = "4.5.63", default-features = false}
dashmap = { version = "6.1.0", features = ["rayon"], default-features = false }
dbus = { version = "0.9.10", features = ["stdfd"], default-features = false }
dialoguer = { version = "0.12.0", default-features = false }
enum_dispatch = { version = "0.3.13", default-features = false }
heck = { version = "0.5.0", default-features = false }
indicatif = { version = "0.18.4", default-features = false }
inotify = { version = "0.11.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.31.2", default-features = false, features = ["socket", "uio", "fs", "process", "signal", "poll"] }
parking_lot = { version = "0.12.5", default-features = false }
rayon = { version = "1.10.0", default-features = false }
rusqlite = { version = "0.39.0", default-features = false }
serde = { version = "1.0.219", features = ["derive", "std"], default-features = false }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
toml = { version = "1.1.2", default-features = false, features = ["display", "parse", "serde"] }
similar = { version = "3.1.0", default-features = false, features = ["text", "unicode"] }
signal-hook = { version = "0.4.4", default-features = false }

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
absolute_paths = "warn"
arithmetic_side_effects = "warn"
clone_on_ref_ptr = "warn"
missing_docs_in_private_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
str_to_string = "warn"
unreachable = "warn"
use_debug = "warn"
unwrap_used = "warn"
panic = "warn"
infinite_loop = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
implicit_hasher = {level = "allow", priority = 1}
needless_continue = {level = "allow", priority = 1}

[lints]
workspace = true

[profile.dev]
debug = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[profile.gdb]
inherits = "dev"
debug = true

[profile.symbols]
inherits = "release"
strip = "none"
