[package]
name = "antimony_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
inotify = { version = "0.11.0", default-features = false }
log = "0.4.29"
nix = "0.30.1"
signal-hook = "0.3.18"
spawn = { path = "../spawn", features = ["elevate"] }
users = "0.11.0"
