[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = []
cache = ["dashmap", "ahash"]
singleton = ["parking_lot"]
stream = ["nix"]

[dependencies]
ahash = { version = "0.8.12", default-features = false, features = ["compile-time-rng", "std"], optional = true }
dashmap = { version = "6.1.0", default-features = false, optional = true }
nix = { version = "0.30.1", features = ["poll", "socket", "uio"], optional = true }
parking_lot = { version = "0.12.5", default-features = false, optional = true }
