[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[dependencies]
spawn = { path = "../spawn", features = ["user"]}
user = {path = "../user"}

console = { version = "0.16.2", default-features = false, features = ["std"] }
Inflector = { version = "0.11.4", default-features = false }
log = { version = "0.4.29", default-features = false }
