[package]
name = "notify"
version = "0.1.0"
edition = "2024"

[dependencies]
user = { path = "../user" }
console = { version = "0.16.2", default-features = false, features = ["std"] }
Inflector = { version = "0.11.4", default-features = false }
log = { version = "0.4.29", default-features = false }
dbus = { version = "0.9.10", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
nix = { version = "0.30.1", default-features = false }
dialoguer = { version = "0.12.0", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
