[package]
name = "spawn"
version = "0.1.0"
edition = "2024"

[features]
default = []
fd = []
elevate = []
cache = []


[dependencies]
seccomp = { path = "../seccomp", optional = true }
user = { path = "../user", optional = true}
log = "0.4.27"
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
which = { path = "../which" }
signal-hook = "0.3.18"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }
