[package]
name = "spawn"
version = "0.1.0"
edition = "2024"

[features]
default = []
fd = []
elevate = []
cache = ["postcard"]
fork = ["serde", "postcard", "common", "temp"]

[dependencies]
common = { path = "../common", optional = true, features = ["stream"] }
seccomp = { path = "../seccomp", optional = true, features = ["notify"] }
temp = { path = "../temp", optional = true }
user = { path = "../user", optional = true}
which = { path = "../which" }

caps = "0.5.6"
dashmap = { version = "6.1.0", default-features = false }
log = { version = "0.4.27", default-features = false }
nix = { version = "0.30.1", features = ["fs", "signal"], default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
postcard = {version = "1.1.3", features = ["use-std"], optional = true, default-features = false}
serde = {version = "1.0.228", default-features = false, optional = true }
signal-hook = { version = "0.3.18", features = ["iterator"], default-features = false }
thiserror = { version = "2.0.17", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }
