[package]
name = "user"
version = "0.1.0"
edition = "2024"

[features]
sync = []

[dependencies]
log = "0.4.29"
nix = { version = "0.30.1", features = ["user"] }
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }
