[package]
name = "user"
version = "0.1.0"
edition = "2024"

[features]
sync = []

[dependencies]
nix = { version = "0.30.1", features = ["user"], default-features = false }
parking_lot = { version = "0.12.5", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace", "std"] }
