[package]
name = "which"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

ahash = { version = "0.8.12", features = ["no-rng"], default-features = false }
dashmap = { version = "6.1.0", default-features = false }
rayon = { version = "1.11.0", default-features = false }
